--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 shadow-sm">
   <div id="navbarContent" class="collapse navbar-collapse">
     <ul class="navbar-nav mx-auto">
-      <li class="nav-item"><a href="" class="nav-link font-weight-bold text-uppercase">About</a></li>
-      <li class="nav-item"><a href="" class="nav-link font-weight-bold text-uppercase">Services</a></li>
-      <li class="nav-item"><a href="" class="nav-link font-weight-bold text-uppercase">Contact</a></li>
+      <li class="nav-item"><a href="" class="nav-link font-weight-bold text-uppercase">Home</a></li>
+      <li class="nav-item"><a href="" class="nav-link font-weight text-uppercase">Services</a></li>
+      <li class="nav-item"><a href="" class="nav-link font-weight text-uppercase">Contact</a></li>
     </ul>
   </div>
     </nav>
