--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
   <div id="navbarContent" class="collapse navbar-collapse">
     <ul class="navbar-nav mx-auto">
       <li class="nav-item"><a href="" class="nav-link font-weight-bold text-uppercase">Home</a></li>
-      <li class="nav-item"><a href="" class="nav-link font-weight text-uppercase">Services</a></li>
-      <li class="nav-item"><a href="" class="nav-link font-weight text-uppercase">Contact</a></li>
+      <li class="nav-item"><a href="" class="nav-link font-weight text-uppercase">ِAbout</a></li>
+      <li class="nav-item"><a href="" class="nav-link font-weight text-uppercase">Voice essay</a></li>
     </ul>
   </div>
     </nav>
