--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,9 +25,7 @@
   */
   
   body {
-    background: #eaafc8;
-    background: -webkit-linear-gradient(to right, #eaafc8, #654ea3);
-    background: linear-gradient(to right, #eaafc8, #654ea3);
+    background-color: white;
     min-height: 100vh;
   }
   
