--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,13 +29,52 @@
     min-height: 100vh;
   }
   
-  code {
-    color: #745eb1;
-    background: #fff;
-    padding: 0.1rem 0.2rem;
-    border-radius: 0.2rem;
+  .code {
+    color: black;
+    font-family:Arial, Helvetica, sans-serif;
   }
   
   .text-uppercase {
     letter-spacing: 0.08em;
+  }
+  .essay{
+    width: 70%;
+    height: 70%;
+    border-radius: 20px;
+    padding: 10px;
+
+  }
+  .mkfor{
+      width: 200px;
+      height: 50px;
+      background-color: #1A1616;
+      color:white;
+      padding: 4px;
+      border-radius: 20px;
+      font-family: Arial, Helvetica, sans-serif;
+      border: none;
+      outline: none;
+  }
+  .py-5{
+    padding-bottom: 8rem!important;
+  }
+  .name{
+      padding: 6px;
+      padding-left: 15px;
+      border-radius: 20px;
+      border: 1px solid black;
+      outline: none;
+      font-family: Arial, Helvetica, sans-serif;
+  }
+  .topic{
+    padding: 6px;
+    padding-left: 15px;
+    border-radius: 20px;
+    border: 1px solid black;
+    outline: none;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  .topic_text{
+    color: black;
+    font-family:Arial, Helvetica, sans-serif;
   }
