--- a/templates/how_to.html
+++ b/templates/how_to.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shortcut icon" type="image/x-icon" href="/static/logo_fs.jpg" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <script src="{{url_for('static',filename='js/script.js')}}"></script>
-    <title>FormalSpeaker</title>
+    <title>project</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 shadow-sm">
@@ -24,33 +23,16 @@
     <div class="container py-4">
         <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-            <img src="/static/logo_fs.jpg"></img>
-            <form method='POST' action='/' id='form'>
-                <br/>
-                <br/>
-                <input type="text" class='topic' name='topic' placeholder="Enter essay topic" autocomplete="off">
-                <br/>
-                <br/>
-                <input type="text" class='name' name='name' placeholder="Enter your name" autocomplete="off">
-                <br/>
-                <br/>
-                <textarea name="essay" class="essay" cols="30" rows="10" placeholder="Enter casual text here..." autocomplete="off"></textarea>
-                <br/>
-                <br/>
-                <div id='b_class'>
-                    <input class="mkfor" id="fb" type='submit' value="Make Formal" onclick='return formal();'>
-                </div>
-                <br/>
-                <br/>
-            </form>
-        </div>
-        </div>
-        <div class="row pt-5">
-        <div class="col-lg-10 mx-auto">
-        </div>
+            <h2 class='code'> Simply type your topic,name and casual text,<br> click on make formal button and there you have it </h2>
         </div>
     </div>
-    </section>
-    <!-- End -->
+    <div class="row pt-5">
+    <div class="col-lg-10 mx-auto">
+        
+    </div>
+    </div>
+</div>
+</section>
+<!-- End -->
 </body>
 </html>
